--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -1,6 +1,6 @@
 <div class="fixed top-0 left-0 z-50 hidden md:block w-64 h-full dark:bg-gray-800 bg-amber-500 shadow-lg border-r-4 border-gray-700 ">
     <div class="flex flex-col items-center py-6">
-        <h2 class="text-xl font-bold text-center text-white">📌 Menú</h2>
+        <h2 class="text-xl font-bold text-center text-white">Menú</h2>
     </div>
     <ul class="space-y-4 px-4">
         <li>
