--- a/src/components/Skill.astro
+++ b/src/components/Skill.astro
@@ -7,16 +7,7 @@ const porcentaje = parseInt(porcentajeStr.replace('%', ''), 10);
 const colorFormado = `bg-${color}`
 ---
 
-<div class="bg-zinc-900 p-4 rounded-xl shadow-lg border border-gray-700 text-center">
+<div class="p-4 text-center">
     <img src={icon} alt={nombre} class="w-12 mx-auto" />
-    <h3 class={`text-base font-bold mt-2 text-${color}`}>{nombre}</h3>
-    <div class="relative pt-1">
-        <div class="overflow-hidden h-2 mb-2 text-xs flex rounded bg-gray-700">
-            <div
-            style={`width: ${porcentaje}%`}
-                class={`shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-yellow-400`}
-            ></div>
-        </div>
-        <span class="text-sm text-gray-300">{porcentaje}%</span>
-    </div>
+    <h5 class={`text-base font-bold mt-2 text-${color}`}>{nombre}</h5>
 </div>
