--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,11 @@ import SectionSkills from "../components/SectionSkills.astro";
       />
   </div>
   
-    
+  <a href="/CV - Elmer Noé Sosa.pdf" download="CV - Elmer Noé Sosa.pdf"  class="ml-10 inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700 md:ml-10 md:inline-flex md:items-center md:px-4 md:py-2 md:text-sm md:font-medium md:text-gray-900 md:bg-white md:border md:border-gray-200 md:rounded-lg md:hover:bg-gray-100 md:hover:text-blue-700 md:focus:z-10 md:focus:ring-4 md:focus:outline-none md:focus:ring-gray-100 md:focus:text-blue-700 dark:md:bg-gray-800 dark:md:text-gray-400 dark:md:border-gray-600 dark:md:hover:text-white dark:md:hover:bg-gray-700 dark:md:focus:ring-gray-700 mx-auto"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+    <path d="M14.707 7.793a1 1 0 0 0-1.414 0L11 10.086V1.5a1 1 0 0 0-2 0v8.586L6.707 7.793a1 1 0 1 0-1.414 1.414l4 4a1 1 0 0 0 1.416 0l4-4a1 1 0 0 0-.002-1.414Z"/>
+    <path d="M18 12h-2.55l-2.975 2.975a3.5 3.5 0 0 1-4.95 0L4.55 12H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-4a2 2 0 0 0-2-2Zm-3 5a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z"/>
+  </svg> Descargar CV</a>
+
     <section class="p-10">
       <h2 class="text-xl font-bold text-white mb-6 text-left ml-2">Del Aprendizaje a la Implementación</h2>
       
