--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,9 +1,9 @@
 ---
 import { Social } from "../content/data/db";
+import RedSocial from "./RedSocial.astro";
 ---
 
 <nav class="relative z-40 dark:bg-gray-800 flex justify-between items-center px-6 py-4 border-b border-gray-700 shadow-lg md:ml-64 bg-gray-800 transition-all duration-300 w-full md:w-[calc(100%-16rem)] max-w-full overflow-hidden">
-  <!-- Nombre y título -->
   <div class="flex flex-col">
     <h2 class="text-3xl font-bold text-white">Elmer Noé Sosa</h2>
     <p class="text-gray-400 text-lg">🚀 Desarrollador Web Full Stack</p>
@@ -11,20 +11,13 @@ import { Social } from "../content/data/db";
 
   <!-- Redes sociales -->
   <ul class="flex gap-6">
-    {Social.map((item, index) => (
-      <li class="transition-transform duration-300 hover:scale-110">
-        <a href={item.href} target="_blank" rel="noopener noreferrer">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="28"
-            height="28"
-            viewBox="0 0 50 50"
-            class="fill-current text-white hover:text-blue-400"
-          >
-            <path d={item.path} />
-          </svg>
-        </a>
-      </li>
+    {Social.map((item) => (
+      <li class="transition-transform duration-300 hover:scale-110"/>
+        <RedSocial
+          name={item.name}
+          href={item.href}
+          path={item.path}
+        />
     ))}
   </ul>
 </nav>
