--- a/src/components/SectionSkills.astro
+++ b/src/components/SectionSkills.astro
@@ -1,21 +1,20 @@
 ---
 import type { Tecnologias } from "../interfaces/Interface";
 
-const { title, tecnologias } = Astro.props;
+const { title, tecnologias } = Astro.props as Tecnologias;
 import Skill from "./Skill.astro";
 ---
 
 <section class="p-4 bg-zinc-900 rounded-3xl shadow-lg border border-gray-700 md:w-120">
     <h2 class="text-xl font-bold text-white mb-4">{title}</h2>
     
-    <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 place-items-center">
+    <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-3 place-items-center">
         {tecnologias.map((tecnologia: any) => (
             <Skill  
                 icon={tecnologia.icon}
                 nombre={tecnologia.nombre}
                 porcentaje={tecnologia.porcentaje}
                 color={tecnologia.color}
-                class="w-[90%] md:w-[80%] lg:w-[70%] max-w-[150px] p-3"
             />
         ))}
     </div>
