--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -11,7 +11,7 @@ const {title, urlImagen, description, href} = Astro.props as Proyecto
     <!-- Contenido -->
     <div class="md:ml-6 mt-4 md:mt-0 text-center md:text-left">
         <h2 class="text-xl font-bold text-yellow-500">{title}</h2>
-        <p class="text-gray-300 mt-2 text-xs" set:html={description}>
+        <p class="text-gray-300 mt-2 text-sm" set:html={description}>
             
         </p>
         <a href={href} class="inline-block text-lg py-2  text-yellow-200 hover:text-yellow-300 font-semibold rounded-lg transition">
